fix: Mobile landscape agent details overflow
a22067683

--- a/public/css/wolfnetAgentPages.less
+++ b/public/css/wolfnetAgentPages.less
@@ -493,7 +493,8 @@
 			.wolfnet_aoExtLinks,
 			.wolfnet_aoContact {
 				display: inline-block;
-				width: 280px;
+				width: 100%;
+				max-width: 280px;
 				text-align: left;
 			}
 
